# prime-agent

./: .env.example  .gitignore  ASKUSER_CALLBACKS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LOGGING_STANDARDS.md  Makefile  README.md  SCHEDULE_CONFIG.md  VAULT_CONFIG.md  config.default.yaml  config.example.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml  security.yml
app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  version.py
app/api/: capture.py  chat.py  claude_sessions.py  commands.py  config.py  files.py  git.py  health.py  monitoring.py  processing.py  push.py  schedule.py  vault_browser.py  vault_search.py
app/middleware/: __init__.py  request_id.py
app/models/: __init__.py  capture.py  chat.py  command.py  command_run_log.py  frontmatter.py  health.py  push.py  schedule.py  schedule_config.py  session.py  vault_browser.py  vault_config.py  vault_search.py
app/prompts/: processCapture.md  processor.txt
app/services/: agent.py  agent_chat.py  agent_identity.py  agent_session_manager.py  apn_service.py  background_tasks.py  chat_session_manager.py  chat_titles.py  claude_session_api.py  claude_session_reader.py  command.py  command_run_manager.py  command_run_post.py  config_manager.py  container.py  device_registry.py  git.py  health.py  inbox.py  lock.py  logs.py  push_notifications.py  push_tokens.py  relay_client.py  schedule.py  title_generator.py  vault.py  vault_browser.py  vault_search.py  worker.py
app/skills/notify-skill/: SKILL.md  notify.py
app/utils/: __init__.py  claude_session_pagination.py  command_titles.py  error_handling.py  frontmatter.py  json_formatter.py  pagination.py  path_encoder.py  path_validation.py  redaction.py  request_context.py
pythonjsonlogger/: __init__.py  jsonlogger.py
scripts/: entrypoint.sh
scripts/app/: entrypoint.sh  parse_config.py
scripts/dev/: create-release.sh
tests/: conftest.py  test_agent_chat.py  test_agent_identity.py  test_agent_session_manager.py  test_api_timeouts.py  test_apn_service.py  test_background_tasks.py  test_capture.py  test_chat_api.py  test_chat_title_generation.py  test_chat_titles_store.py  test_claude_session_api.py  test_claude_session_pagination.py  test_claude_session_reader.py  test_claude_sessions_api.py  test_command_run_post.py  test_command_service.py  test_command_trigger.py  test_commands_api.py  test_concurrency_model.py  test_config.py  test_config_api.py  test_config_manager.py  test_config_race_conditions.py  test_config_reload_api.py  test_config_types.py  test_cors_security.py  test_credential_safety.py  test_device_registry.py  test_error_handling.py  test_frontmatter_parsing.py  test_health_check_filter.py  test_health_checks.py  test_inbox.py  test_oauth_authentication.py  test_path_validation.py  test_processing.py  test_push_api.py  test_push_notification_service.py  test_push_tokens.py  (+14 more)
